# veridra-core

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_suite.yaml  chatbot_suite.yaml  customer_support_suite.yaml  fail_suite.yaml  groq_suite.yaml  injection_suite.yaml  ollama_suite.yaml  safety_suite.yaml
src/veridra/: cli.py
src/veridra/engine/: runner.py
src/veridra/graders/: correctness.py  regression.py  safety.py
src/veridra/providers/: __init__.py  base.py  groq.py  mock.py  ollama.py  openai.py
src/veridra/reporters/: console.py  json.py
src/veridra/schemas/: __init__.py  case.py  result.py  suite.py
tests/: test_cli_compare.py  test_cli_regression.py  test_cli_report.py  test_cli_run.py  test_cli_usability.py  test_cli_validate.py  test_full_suites.py  test_graders.py  test_phase8_reliability.py  test_provider_groq.py  test_provider_ollama.py  test_provider_openai.py  test_runner.py
tests/.tmp/: invalid-suite.yaml  run-blank-model-override.yaml  run-fail-fast-result.json  run-fail-fast.yaml  run-mock-pass-result.json  run-mock-pass.yaml  run-model-override-result.json  run-model-override.yaml  run-no-model-override-result.json  run-no-model-override.yaml  run-output-error.yaml  run-pass-result.json  run-pass.yaml  run-provider-error.yaml  run-real-missing-key.yaml  run-verbose-result.json  run-verbose.yaml  valid-suite-verbose.yaml
tests/fixtures/: golden_report_keys.json
