[project]
name = "veridra-core"
version = "0.1.0"
description = "AI verification and evaluation engine for LLM applications"
authors = [{ name = "Veridra Labs" }]
maintainers = [{ name = "Apu Sharma", email = "apusharma45@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "llm",
  "ai-evaluation",
  "prompt-testing",
  "safety-testing",
  "regression-testing",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "typer",
  "pydantic",
  "pyyaml",
  "rich",
  "httpx",
  "openai",
  "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/apusharma45/veridra-core"
Repository = "https://github.com/apusharma45/veridra-core"
Issues = "https://github.com/apusharma45/veridra-core/issues"
Documentation = "https://github.com/apusharma45/veridra-core#readme"
Changelog = "https://github.com/apusharma45/veridra-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build"]

[project.scripts]
veridra = "veridra.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
show_error_codes = true

[[tool.mypy.overrides]]
module = ["yaml", "openai"]
ignore_missing_imports = true
